--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_spinkit: ^5.0.0
   font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
+  intl: ^0.17.0
   provider: ^5.0.0
 
 dev_dependencies:
