--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   email_validator: ^2.0.1
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
+  flutter_launcher_icons: ^0.9.0
   flutter_spinkit: ^5.0.0
   font_awesome_flutter: ^9.1.0
   google_fonts: ^2.1.0
@@ -48,8 +49,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
